--- a/public/about/index.html
+++ b/public/about/index.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
   <head><link rel="icon" href="/favicon_main.svg"><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta http-equiv="x-ua-compatible" content="ie=edge" /><meta property="og:url"  content="https://ozturkfemre.netlify.app/credits/" />
-    <meta property="og:type" content="article" /><meta property="og:title" content="Credits" /><meta property="og:description" content="" /><meta property="og:image:width"  content="375" />
-        <meta property="og:image:height" content="250" /><meta property="og:image" content="https://ozturkfemre.netlify.app/images/sum_hu2319ed292ea941f25cfb6ae89784bf56_55250_600x0_resize_box_3.png" /><title>Fatih Emre Ozturk - Credits</title>
+<meta http-equiv="x-ua-compatible" content="ie=edge" /><meta property="og:url"  content="https://ozturkfemre.netlify.app/about/" />
+    <meta property="og:type" content="article" /><meta property="og:title" content="About Me" /><meta property="og:description" content="" /><meta property="og:image:width"  content="375" />
+        <meta property="og:image:height" content="250" /><meta property="og:image" content="https://ozturkfemre.netlify.app/images/sum_hu2319ed292ea941f25cfb6ae89784bf56_55250_600x0_resize_box_3.png" /><title>Fatih Emre Ozturk - About Me</title>
 
     
 <link href="https://fonts.googleapis.com/css?family=Source&#43;Code&#43;Pro" rel="stylesheet">
@@ -125,12 +125,15 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title is-2 section-title">Credits</h1>
+        <h1 class="title is-2 section-title">About Me</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
         
         <section class="section content has-text-justified">
-          <p>Theme is builded by <a href="https://github.com/PippoRJ">Roberto Jordaney.</a></p>
+          <p>My name is Fatih Emre Öztürk. I was given the opportunity for a good undergraduate education at Bilkent University, a private institution with a completely English curriculum, through a full scholarship offered to me based on academic performance. My interest in logic, finding patterns and problem-solving led me to major in philosophy. Throughout those university years I was attracted to contemporary issues involving technology, which incited me to take a programming course, which in turn reinforced my curiosity and led me to write my bachelor’s thesis on artificial intelligence.</p>
+<p>During my studies at Bilkent and following my graduation, I pursued a passion for writing; I have written and published science fiction novels, and have worked as an editor, translator, and subtitle translator for movies and TV series. After this short hiatus from university, I found myself drawn back to academic life by a strong desire to learn. I still felt an enduring fascination with artificial intelligence and machine learning, and I realized that to fully satisfy my interests I had to transition from philosophy to a more applied field and one more directly related to computer science. Considering how the current era is defined by data, not only for its indispensable value in a full spectrum of different fields but also for the important questions surrounding it that are being raised, data science felt like a fitting direction to take.</p>
+<p>This has led me to my current MSc in Data Science at Dokuz Eylul University. While my undergraduate degree was in a different field, it developed my logic and analytical skills. During that time I took programming and statistics courses which were relevant to my current studies, though the jump from a bachelor’s in philosophy to a master’s in data science required me to catch up on a lot of missing knowledge and I saw to it during the months prior to the start of my courses. I searched for the best sources of information and absorbed it; I read textbooks, watched tutorials, coded, practiced, so that by the start of the program I was not only ready but ahead. In doing so I proved to myself that I had the resourcefulness, determination and independence necessary for graduate studies. In addition, throughout this past year I have been leading study sessions and have given supervised learning, unsupervised learning, R, R Markdown and Shiny lectures to undergraduate and graduate students. In December I gave an oral presentation, in English, at a national conference on data science.</p>
+<p>I have a great interest in data science. The path that has led me to be a data scientist has not been linear for me nor simple; rather it has been willfully shaped by passion and resolve. I am hard-working, independent and determined. I know that the research process can be painful and full of obstacles, but encountering problems and devoting the time and effort necessary to solve them is what drives me. I love to learn, I find teaching rewarding, I enjoy writing and I value feedback. I welcome any tool that helps me grow as a student of data science and as a person.</p>
 
         </section>
       </div>
