--- a/public/topic_1/kdetermination/index.html
+++ b/public/topic_1/kdetermination/index.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
   <head><link rel="icon" href="/favicon_main.svg"><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta http-equiv="x-ua-compatible" content="ie=edge" /><meta property="og:url"  content="https://ozturkfemre.netlify.app/credits/" />
-    <meta property="og:type" content="article" /><meta property="og:title" content="Credits" /><meta property="og:description" content="" /><meta property="og:image:width"  content="375" />
-        <meta property="og:image:height" content="250" /><meta property="og:image" content="https://ozturkfemre.netlify.app/images/sum_hu2319ed292ea941f25cfb6ae89784bf56_55250_600x0_resize_box_3.png" /><title>Fatih Emre Ozturk - Credits</title>
+<meta http-equiv="x-ua-compatible" content="ie=edge" /><meta property="og:url"  content="https://ozturkfemre.netlify.app/topic_1/kdetermination/" />
+    <meta property="og:type" content="article" /><meta property="og:title" content="Shiny Dashboard - kdetermination.app" /><meta property="og:description" content="Shiny Dashboard" /><meta property="og:image:width"  content="375" />
+        <meta property="og:image:height" content="250" /><meta property="og:image" content="https://ozturkfemre.netlify.app/topic_1/kdetermination/preview_hu5fb1a5faec391d7841968937e13edd16_89349_600x0_resize_box_3.png" /><title>Fatih Emre Ozturk - Shiny Dashboard - kdetermination.app</title>
 
     
 <link href="https://fonts.googleapis.com/css?family=Source&#43;Code&#43;Pro" rel="stylesheet">
@@ -125,12 +125,14 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title is-2 section-title">Credits</h1>
+        <h1 class="title is-2 section-title">Shiny Dashboard - kdetermination.app</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
         
         <section class="section content has-text-justified">
-          <p>Theme is builded by <a href="https://github.com/PippoRJ">Roberto Jordaney.</a></p>
+          <p>In this project, I turned the <a href="https://github.com/ozturkfemre/optimal_k">optimal k project</a>, which I previously shared as a repository in github, into a Shiny dashboard. In this dashboard, you can find the cluster number recommendations of Average Silhouette, Calinski-Harabasz, Davies-Bouldin, and Dunn Index methods for nine real data sets.</p>
+<p>Gist of the app is created, so you can view the dashboard by writing the following code to your Rstudio or other IDEs:</p>
+<p><code>shiny::runGist(&quot;da55324b86e2998d14651015dced384b&quot;)</code></p>
 
         </section>
       </div>
