--- a/public/topic_2/index.html
+++ b/public/topic_2/index.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
   <head><link rel="icon" href="/favicon_main.svg"><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta http-equiv="x-ua-compatible" content="ie=edge" /><meta property="og:url"  content="https://ozturkfemre.netlify.app/credits/" />
-    <meta property="og:type" content="article" /><meta property="og:title" content="Credits" /><meta property="og:description" content="" /><meta property="og:image:width"  content="375" />
-        <meta property="og:image:height" content="250" /><meta property="og:image" content="https://ozturkfemre.netlify.app/images/sum_hu2319ed292ea941f25cfb6ae89784bf56_55250_600x0_resize_box_3.png" /><title>Fatih Emre Ozturk - Credits</title>
+<meta http-equiv="x-ua-compatible" content="ie=edge" /><meta property="og:url"  content="https://ozturkfemre.netlify.app/topic_2/" />
+    <meta property="og:type" content="article" /><meta property="og:title" content="Technical Training" /><meta property="og:description" content="" /><meta property="og:image:width"  content="375" />
+        <meta property="og:image:height" content="250" /><meta property="og:image" content="https://ozturkfemre.netlify.app/images/sum_hu2319ed292ea941f25cfb6ae89784bf56_55250_600x0_resize_box_3.png" /><title>Fatih Emre Ozturk - Technical Training</title>
 
     
 <link href="https://fonts.googleapis.com/css?family=Source&#43;Code&#43;Pro" rel="stylesheet">
@@ -125,12 +125,168 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title is-2 section-title">Credits</h1>
+        <h1 class="title is-2 section-title">Technical Training</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
         
         <section class="section content has-text-justified">
-          <p>Theme is builded by <a href="https://github.com/PippoRJ">Roberto Jordaney.</a></p>
+          <h3 id="skills">SKILLS</h3>
+<table>
+<thead>
+<tr>
+<th style="text-align:center"></th>
+<th style="text-align:center"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center">Python</td>
+<td style="text-align:center">Bash</td>
+</tr>
+<tr>
+<td style="text-align:center">R</td>
+<td style="text-align:center">Microsoft Office</td>
+</tr>
+<tr>
+<td style="text-align:center">MySQL</td>
+<td style="text-align:center">Statistical Analysis</td>
+</tr>
+<tr>
+<td style="text-align:center">SQLite</td>
+<td style="text-align:center">Machine Learning</td>
+</tr>
+<tr>
+<td style="text-align:center">DBBrowser</td>
+<td style="text-align:center">Data Visualization</td>
+</tr>
+<tr>
+<td style="text-align:center">MatLab</td>
+<td style="text-align:center">Data Management</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<h3 id="education">EDUCATION</h3>
+<p><strong>Master of Science in Data Science | Dokuz Eylul University, İzmir/Turkey</strong>
+Feb 2022 &mdash; Present
+Department of Statistics | Advisor: Neslihan Demirel |
+<em>Thesis: MSM: Modified Silhouette Based on Median</em></p>
+<p><strong>Bachelor in Philosophy | Bilkent University, Ankara/Turkey</strong>
+Sep 2012 &mdash; Jan 2019
+Department of Philosophy | Advisor: Bill Wringe |
+<em>Thesis: Can machines have emotions?</em></p>
+<hr>
+<h3 id="university-courses">University courses</h3>
+<ul>
+<li>
+<p>Calculus I &amp; Calculus II | Sep 2013 &amp; Jan 2014</p>
+</li>
+<li>
+<p>Introduction to Computing and Programming | Jan 2014</p>
+</li>
+<li>
+<p>Introduction to Probability and Statistics | Jun 2014</p>
+</li>
+<li>
+<p>Python for Data Science | Jan 2022</p>
+</li>
+<li>
+<p>Exploratory Data Analysis and Data Visualization | Jan 2022</p>
+</li>
+<li>
+<p>Unsupervised Statistical Learning | Jan 2022 -Supervised Statistical Learning | Sep 2022</p>
+</li>
+<li>
+<p>R for Statistical Computing and Programming | Sep 2022</p>
+</li>
+<li>
+<p>Probability and Statistics for Data Science | Sep 2022</p>
+</li>
+</ul>
+<h3 id="online-courses">Online courses</h3>
+<ul>
+<li>
+<p>Python for Data Science and Artificial Intelligence | Udemy| Nov 2021</p>
+</li>
+<li>
+<p>Python for Data Science and Machine Learning Bootcamp | Udemy | Dec 2021</p>
+</li>
+<li>
+<p>Data Management with SQL for Social Scientists | Data Carpentry | Nov 2021</p>
+</li>
+<li>
+<p>Introduction to Geospatial Concepts | Data Carpentry | Jan 2022</p>
+</li>
+<li>
+<p>Introduction to R for Geospatial Data | Data Carpentry | Jan 2022</p>
+</li>
+<li>
+<p>Programming with Python | Software Carpentry | Nov 2021</p>
+</li>
+<li>
+<p>Programming with R | Software Carpentry | Nov 2021</p>
+</li>
+<li>
+<p>Version Control with Git | Software Carpentry | Dec 2021</p>
+</li>
+</ul>
+<h3 id="conference-workshops">Conference Workshops</h3>
+<ul>
+<li>
+<p>Lessons for Designing Scalable and Maintainable Shiny Apps | useR! Jun 2022</p>
+</li>
+<li>
+<p>Introduction to Git and Github | useR! Jun 2022</p>
+</li>
+<li>
+<p>Regression Modelling Strategies | useR Jun 2022</p>
+</li>
+</ul>
+<hr>
+<h4 id="academic-service">ACADEMIC SERVICE</h4>
+<p>Artificial Intelligence Symposium | Mar 2015 | Organizing Committee Member of the Bilkent University Philosophy Society</p>
+<hr>
+<h4 id="conferences">CONFERENCES</h4>
+<ul>
+<li>
+<p>Oral talk titled &ldquo;Comparison of the methods to determine the optimal number of clusters&rdquo; | Dec 2, 2022 | Dokuz Eylul University International Graduate Research Symposium</p>
+</li>
+<li>
+<p>Participation | Jun 20-23, 2022 | Virtual | useR! 2022</p>
+</li>
+</ul>
+<hr>
+<h3 id="awards">AWARDS</h3>
+<ul>
+<li>
+<p>Full Scholarship 2012-2019 Bilkent University</p>
+</li>
+<li>
+<p>Honor, 2014 Bilkent University</p>
+</li>
+<li>
+<p>Honor, 2014 Bilkent University</p>
+</li>
+<li>
+<p>High Honor, 2022 Dokuz Eylul University</p>
+</li>
+<li>
+<p>High Honor, 2023 Dokuz Eylul University</p>
+</li>
+</ul>
+<hr>
+<h3 id="languages">LANGUAGES</h3>
+<ul>
+<li>
+<p><strong>Turkish:</strong> <em>Native</em></p>
+</li>
+<li>
+<p><strong>English:</strong> <em>IELTS 7.0</em></p>
+</li>
+<li>
+<p><strong>French:</strong> <em>Beginner</em></p>
+</li>
+</ul>
 
         </section>
       </div>
