--- a/public/topic_1/classification/index.html
+++ b/public/topic_1/classification/index.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
   <head><link rel="icon" href="/favicon_main.svg"><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta http-equiv="x-ua-compatible" content="ie=edge" /><meta property="og:url"  content="https://ozturkfemre.netlify.app/credits/" />
-    <meta property="og:type" content="article" /><meta property="og:title" content="Credits" /><meta property="og:description" content="" /><meta property="og:image:width"  content="375" />
-        <meta property="og:image:height" content="250" /><meta property="og:image" content="https://ozturkfemre.netlify.app/images/sum_hu2319ed292ea941f25cfb6ae89784bf56_55250_600x0_resize_box_3.png" /><title>Fatih Emre Ozturk - Credits</title>
+<meta http-equiv="x-ua-compatible" content="ie=edge" /><meta property="og:url"  content="https://ozturkfemre.netlify.app/topic_1/classification/" />
+    <meta property="og:type" content="article" /><meta property="og:title" content="Classification Project" /><meta property="og:description" content="Comparison of classification algorithms" /><meta property="og:image:width"  content="375" />
+        <meta property="og:image:height" content="250" /><meta property="og:image" content="https://ozturkfemre.netlify.app/images/sum_hu2319ed292ea941f25cfb6ae89784bf56_55250_600x0_resize_box_3.png" /><title>Fatih Emre Ozturk - Classification Project</title>
 
     
 <link href="https://fonts.googleapis.com/css?family=Source&#43;Code&#43;Pro" rel="stylesheet">
@@ -125,12 +125,173 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title is-2 section-title">Credits</h1>
+        <h1 class="title is-2 section-title">Classification Project</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
         
         <section class="section content has-text-justified">
-          <p>Theme is builded by <a href="https://github.com/PippoRJ">Roberto Jordaney.</a></p>
+          <h2 id="aim-of-the-project">Aim of the Project</h2>
+<p>In <a href="https://github.com/ozturkfemre/classification">this project</a>, I compared classification tree, bagging, random forest, logistic regression, linear discriminant analysis, quadratic discriminant analysis and support vector machine algorithms on the same data set to see which one gives better results. It will be more useful to follow the work from .Rmd files. Both <a href="https://github.com/ozturkfemre/classification/blob/main/TR/%5BTR%5Ds%C4%B1n%C4%B1fland%C4%B1rma_rapor.Rmd">Turkish</a> and <a href="https://github.com/ozturkfemre/classification/blob/main/ENG/%5BENG%5Dclassification_report.Rmd">English</a> .Rmd and .R files are available.</p>
+<h2 id="dataset-information">Dataset Information</h2>
+<p>The dataset can be accessed in the &ldquo;kmed&rdquo; package with the name Heart, or it can be accessed from the <a href="https://archive.ics.uci.edu/ml/datasets/Heart+Disease">UCI Machine Learning Repository.</a></p>
+<p>There are 14 variables and 297 observations in the data set. Each observation represents a patient. Each variable contains various information of the patient. The table below may be useful to understand what each variable means.</p>
+<table>
+<thead>
+<tr>
+<th>variable</th>
+<th>description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>age</td>
+<td>Age in years (numerical).</td>
+</tr>
+<tr>
+<td>sex</td>
+<td>Sex: 1 = male, 0 = female (logical).</td>
+</tr>
+<tr>
+<td>cp</td>
+<td>Four chest pain types: (1) typical angina, (2) atypical angina (3)non-anginal pain, (4) asymptomatic (categorical).</td>
+</tr>
+<tr>
+<td>trestbps</td>
+<td>Resting blood pressure (in mm Hg on admission to the hospital) (numerical).</td>
+</tr>
+<tr>
+<td>chol</td>
+<td>Serum cholestoral in mg/dl (numerical).</td>
+</tr>
+<tr>
+<td>fbs</td>
+<td>Fasting blood sugar more than 120 mg/dl (logical).</td>
+</tr>
+<tr>
+<td>restecg</td>
+<td>Resting electrocardiographic results: (0) normal, (1) having ST-T wave abnormality, (2) showing probable or definite left ventricular hypertrophy by Estes&rsquo; criteria (categorical).</td>
+</tr>
+<tr>
+<td>thalach</td>
+<td>Maximum heart rate achieved (numerical).</td>
+</tr>
+<tr>
+<td>exang</td>
+<td>Exercise induced angina (logical).</td>
+</tr>
+<tr>
+<td>oldpeak</td>
+<td>ST depression induced by exercise relative to rest (numerical).</td>
+</tr>
+<tr>
+<td>slope</td>
+<td>The slope of the peak exercise ST segment: (1) upsloping, (2) flat, (3) downsloping (categorical).</td>
+</tr>
+<tr>
+<td>ca</td>
+<td>Number of major vessels (0-3) colored by flourosopy (numerical).</td>
+</tr>
+<tr>
+<td>thal</td>
+<td>3) normal, (6) fixed defect, (7) reversable defect (categorical).</td>
+</tr>
+<tr>
+<td>class</td>
+<td>Diagonosis of heart disease (4 classes). It can be 2 classes by setting 0 for 0 values and 1 for non-0 values.</td>
+</tr>
+</tbody>
+</table>
+<p>: variable information</p>
+<p><strong>Data Prepration</strong></p>
+<ul>
+<li>
+<p>Before proceeding with the algorithms, the dependent variable was reduced to two levels: 0 for healthy, 1 for heart disease.</p>
+</li>
+<li>
+<p>Although it is numeric, the variable ca, which behaves categorically due to its low range, has been converted to a factor.</p>
+</li>
+<li>
+<p>The data set was divided into 70% train and 30% test data.</p>
+</li>
+</ul>
+<h2 id="study">Study</h2>
+<p>The Study section consists of 6 chapters: descriptive statistics, data visualization, algorithms, roc curves, comparison, and the best model</p>
+<h3 id="descriptive-statistics">Descriptive Statistics</h3>
+<p>In the descriptive statistics section, descriptive statistics of each variable were analysed. These analyses were made separately for categorical and numerical variables.</p>
+<h3 id="data-visualization">Data Visualization</h3>
+<p>In this section, boxplots of numerical variables are analysed first. Plots are interpreted in detail.</p>
+<p>Then, the boxplots of the numerical variables according to the class variable are also drawn. In this way, it was examined how the patient and healthy individuals changed in each variable.</p>
+<h3 id="algorithms">Algorithms</h3>
+<p>In this section, classification tree, bagging, random forest, logistic regression, linear discriminant analysis, quadratic discriminant analysis and support vector machine algorithms are applied to the dataset.</p>
+<h4 id="classification-tree">Classification Tree</h4>
+<p>Two R packages were used in the Classification Tree study. These packages can be listed as tree and rpart packages.</p>
+<p>In the analysis performed with the tree package, the whole tree was first created. Then, the point where the tree will be pruned was selected with cross validation.</p>
+<p>Since the rpart package also does the pruning itself, only one model was created.</p>
+<p>The unpruned tree generated with the tree package, the pruned tree generated with the tree package, and the tree generated with the rpart package were compared with performance metrics and the best tree was decided.</p>
+<h4 id="bagging">Bagging</h4>
+<p>Two R packages were utilised in the bagging study. These packages can be listed as randomForest and ipred packages.</p>
+<p>The outputs of the models created with both packages were analysed.</p>
+<p>Then, the performance metrics of the models created with both packages were compared and the best bagging model was decided.</p>
+<h4 id="random-forest">Random Forest</h4>
+<p>In the Random Forest study, the randomForest R package was used.</p>
+<p>Then, the best parameters were decided with grid search. The following options were used in parameter selection:</p>
+<ul>
+<li>
+<p>mtry: sqrt(p) was used since it is a classification study.</p>
+</li>
+<li>
+<p>ntree: the range where the OOB error rate decreases was selected by plotting the model.</p>
+</li>
+<li>
+<p>nodesize: 1,3,5,10 values were tried.</p>
+</li>
+</ul>
+<p>After Grid Search, a second model was built with the best parameters.</p>
+<p>Then the performance metrics of the first model and the model created after grid search were compared and the best random forest model was decided.</p>
+<h4 id="logistic-regression">Logistic Regression</h4>
+<p>In the Logistic Regression study, the model was first established. Then, the following procedures were applied in order:</p>
+<ol>
+<li>
+<p>Statistical significance of the model</p>
+</li>
+<li>
+<p>Coefficient analysis Confidence Interval for Coefficients</p>
+</li>
+<li>
+<p>Confidence Interval for Odds Ratio</p>
+</li>
+<li>
+<p>Logistic Regression Diagnosis (Outlier Analysis, Leverage Analysis, Influential Observations)</p>
+</li>
+<li>
+<p>Assumption Check</p>
+</li>
+</ol>
+<p>Then, predictions are made at three different threshold values and performance metrics are compared and the threshold that gives the best logistic regression model is decided.</p>
+<h4 id="linear--quadratic-discriminant-analysis">Linear &amp; Quadratic Discriminant Analysis</h4>
+<p>Since only numeric variables can be used in Linear Discriminant Analysis and Quadratic Discriminant Analysis algorithms, a copy of the data set consisting only of numeric variables was created for these two analyses.</p>
+<p>Then, linear and quadratic discriminant analysis models were established and the outputs of these models were analysed.</p>
+<p>Assumptions were checked for both models. The following procedures were performed in assumption control:</p>
+<ul>
+<li>
+<p>Multivariate Normality Tests (Henze - Zirkler, Mardia, Royston)</p>
+</li>
+<li>
+<p>Homogeneity (Levene Test, Visual Analysis, BoxM)</p>
+</li>
+</ul>
+<h4 id="support-vector-machine">Support Vector Machine</h4>
+<p>This section focuses on the Support Vector Machine algorithm. It is not wrong to say that it consists of 3 parts.</p>
+<p>In the first part, the support vector classifier model was created with linear kernel. The model was tuned with direct cross validation.</p>
+<p>In the second part, polynomial support vector classifier model was created with polynomial kernel. The model was tuned with direct cross validation.</p>
+<p>In the third part, the support vector machine model was created with hyperplane. The model was tuned with direct cross validation.</p>
+<p>After interpreting the outputs of all models, predictions were made and the performance metrics of the three models were compared and the best model was decided.</p>
+<h3 id="roc-curves">ROC Curves</h3>
+<p>In this section, the best models selected for each algorithm are compared with each other. This comparison is done with ROC Curve.</p>
+<h3 id="comparison">Comparison</h3>
+<p>In this section, all algorithms are compared according to performance metrics. Accuracy rate, Sensitivity, Specificity metrics were used in this comparison. A separate graph is drawn for each metric. This graph was determined to facilitate the overfit analysis.</p>
+<h3 id="the-best-model">The Best Model</h3>
+<p>The best model is decided in this section by considering the performance metrics. Then, the performance metrics of the model are analysed in detail on the test set.</p>
 
         </section>
       </div>
