--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 <meta property="og:title" content="feo" />
 <meta property="og:description" content="feo&#39;s personal website" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://hugo-profile.netlify.app/" /><meta property="og:site_name" content="Fatih Emre Ozturk" />
+<meta property="og:url" content="https://fatihemreozturk.netlify.app/" /><meta property="og:site_name" content="Fatih Emre Ozturk" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="feo"/>
@@ -899,7 +899,7 @@ feo
     <div class="row justify-content-center">
         <div class="col-md-4 text-center">
             <div class="pb-2">
-                <a href="https://hugo-profile.netlify.app" title="feo">
+                <a href="https://fatihemreozturk.netlify.app/" title="feo">
                     <img alt="Footer logo" src="/images/feopp.jpeg"
                         height="40px" width="40px">
                 </a>
