--- a/public/blogs/kmeans/index.html
+++ b/public/blogs/kmeans/index.html
@@ -291,7 +291,7 @@ Unsupervised Learning in R | k-means Clustering | feo
 <h4 id="step-bystep">Step by Step</h4>
 <p>The steps to perform k-means clustering are:</p>
 <p><strong>Step 1:</strong></p>
-<p>Select k, the number of clusters, that you want to form in the data. As I mentioned before, there are lots of methods to determine the optimal number of clusters. You can see the <a href="https://medium.com/@ozturkfemre/unsupervised-learning-determination-of-cluster-number-be8842cdb11">first post </a>of this series for detailed information about optimal cluster number determination.</p>
+<p>Select k, the number of clusters, that you want to form in the data. As I mentioned before, there are lots of methods to determine the optimal number of clusters. You can see the <a href="https://medium.com/@ozturkfemre/unsupervised-learning-determination-of-cluster-number-be8842cdb11">first post</a>of this series for detailed information about optimal cluster number determination.</p>
 <p><strong>Step 2:</strong></p>
 <p>Select k random points from the dataset as the initial centroids (cluster center).</p>
 <p>As first assume we have a data like the follows:</p>
@@ -431,7 +431,7 @@ Available components:
 <p><img src="https://cdn-images-1.medium.com/max/800/1*VS5TXdAnXl7EDyHOZ8u-Xw.png" alt=""></p>
 <hr>
 <p>Just like always:</p>
-<p>&quot;In case I don't see ya, good afternoon, good evening, and good night!&quot;</p>
+<p>&ldquo;In case I don&rsquo;t see ya, good afternoon, good evening, and good night!&rdquo;</p>
 <hr>
 <p><strong>References</strong></p>
 <p>[1] Hartigan, John A., Manchek A. Wong. Algorithm AS 136: A k-means clustering algorithm. Journal of the royal statistical society. series c (applied statistics) 28., 100&ndash;108, 1979</p>
