--- a/public/blogs/hc/index.html
+++ b/public/blogs/hc/index.html
@@ -313,14 +313,14 @@ Unsupervised Learning in | Hierarchical Clustering | feo
 <p>Average linkage: This method calculates the average distance between all pairs of points in the two clusters being merged. [6]</p>
 </li>
 <li>
-<p>Ward's Minimum Variance linkage: This method minimizes the variance of the distances between points within the same cluster. It merges the clusters that result in the smallest increase in the total sum of squared distances within each cluster.[7]</p>
+<p>Ward&rsquo;s Minimum Variance linkage: This method minimizes the variance of the distances between points within the same cluster. It merges the clusters that result in the smallest increase in the total sum of squared distances within each cluster.[7]</p>
 </li>
 </ol>
-<p>The choice of linkage method can have a significant impact on the resulting clusters, as each method has its own strengths and weaknesses. Therefore, it is important to carefully consider which linkage method is most appropriate for the data and the specific problem being addressed. In this post, I will focus on two metrics which are Ward's Minimum Variance Method and Average linkage method.</p>
+<p>The choice of linkage method can have a significant impact on the resulting clusters, as each method has its own strengths and weaknesses. Therefore, it is important to carefully consider which linkage method is most appropriate for the data and the specific problem being addressed. In this post, I will focus on two metrics which are Ward&rsquo;s Minimum Variance Method and Average linkage method.</p>
 <hr>
-<h3 id="wards-minimum-variancemethod">Ward's Minimum Variance Method</h3>
+<h3 id="wards-minimum-variancemethod">Ward&rsquo;s Minimum Variance Method</h3>
 <p>Ward linkage is a hierarchical clustering method that aims to minimize the variance of the distances between points within the same cluster. It merges the clusters that result in the smallest increase in the total sum of squared distances within each cluster.</p>
-<p>To understand how Ward linkage works, let's assume we have n data points and we start with each point in its own cluster. At each step, we merge the two clusters that result in the smallest increase in the total sum of squared distances within each cluster.</p>
+<p>To understand how Ward linkage works, let&rsquo;s assume we have n data points and we start with each point in its own cluster. At each step, we merge the two clusters that result in the smallest increase in the total sum of squared distances within each cluster.</p>
 <p>To measure the increase in the total sum of squared distances within each cluster, we use the following formula:</p>
 <p><img src="https://cdn-images-1.medium.com/max/800/0*x6DZmde3LRTGdfHF.gif" alt=""></p>
 <p>The first step in Ward linkage is to calculate the centroids of each individual point, since each point starts as its own cluster. Then, we calculate the pairwise distances between each centroid. Next, we merge the two clusters with the smallest value of the total sum of squared, and calculate the new centroid of the merged cluster. We repeat this process until all the points are in a single cluster.</p>
@@ -362,11 +362,11 @@ cor(dist_man,coph_m)
 &gt; cor(dist_man,coph_m)
 [1] 0.6018289
 </code></pre><p>In general, a higher cophenetic correlation coefficient indicates that the dendrogram is a more accurate representation of the pairwise distances between the original data points. The cophenetic correlation coefficient can range between 0 and 1, with a value of 1 indicating a perfect fit between the dendrogram and the pairwise distances.</p>
-<p>In this case it can be said that when the correlation between Cophenetic and distance matrix is examined, it is observed that hierarchical clustering with Euclidean distance gives better results. That's why I will continue the analysis with Euclidean distance metric.</p>
-<h3 id="wards-minimum-variance-method-inr">Ward's Minimum Variance Method in R</h3>
+<p>In this case it can be said that when the correlation between Cophenetic and distance matrix is examined, it is observed that hierarchical clustering with Euclidean distance gives better results. That&rsquo;s why I will continue the analysis with Euclidean distance metric.</p>
+<h3 id="wards-minimum-variance-method-inr">Ward&rsquo;s Minimum Variance Method in R</h3>
 <p>Hierarchical clustering can be represented by a dendrogram, which is a tree-like structure that shows the hierarchy of clusters and the relations between them. The dendrogram can be cut at a certain height to obtain a flat clustering solution with a specific number of clusters. To determine the number of clusters, as we did in the k-means and k-medoids, we can use methods to determine the optimal number of clusters.</p>
 <p>Since I covered <a href="https://medium.com/@ozturkfemre/unsupervised-learning-determination-of-cluster-number-be8842cdb11">methods to determine the optimal number of clusters</a> in the first post of this series, I will not show you the codes in this post. However, I can state that all of the methods suggested 2 as the optimal number of cluster.</p>
-<p>As I mentioned, another way for hierarchical clustering is to check the dendogram to decide where to cut it in order to decide the optimal number of cluster. However, I, personally, find this method &quot;open-ended&quot; which I do not think it to be a case for the optimal number of cluster. Nevertheless, I will share codes and dendogram with you.</p>
+<p>As I mentioned, another way for hierarchical clustering is to check the dendogram to decide where to cut it in order to decide the optimal number of cluster. However, I, personally, find this method &ldquo;open-ended&rdquo; which I do not think it to be a case for the optimal number of cluster. Nevertheless, I will share codes and dendogram with you.</p>
 <p>You can use fviz_dend function in the factoextra package to visualise dendogram of a hierarchical clustering with the object you created from hierarchical clustering with the function hclust from stats package.</p>
 <pre tabindex="0"><code>hc_e &lt;- hclust(d=dist_euc, method=&#34;ward.D2&#34;)
 fviz_dend(hc_e,cex=.5) 
@@ -413,18 +413,18 @@ grupward2 # gives cluster assignments for each observation
 <hr>
 <h3 id="average-linkagemethod">Average Linkage Method</h3>
 <p>Average linkage, also known as UPGMA (Unweighted Pair Group Method with Arithmetic Mean), is a hierarchical clustering method that calculates the distance between clusters as the average distance between all pairs of points in the two clusters being merged.</p>
-<p>To understand how average linkage works, let's assume we have n data points and we start with each point in its own cluster. At each step, we merge the two clusters that have the smallest average distance between all pairs of points.</p>
+<p>To understand how average linkage works, let&rsquo;s assume we have n data points and we start with each point in its own cluster. At each step, we merge the two clusters that have the smallest average distance between all pairs of points.</p>
 <p>The first step in average linkage is to compute the pairwise distances between all of the data points. This can be done using any distance metric, such as Euclidean distance or Manhattan distance. Next, we compute the average distance between all pairs of points in each cluster. We then merge the two clusters with the smallest average distance, and update the pairwise distances between the new merged cluster and the remaining clusters.</p>
 <p>One of the advantages of average linkage is that it tends to produce clusters that are well-separated and roughly equal in size. However, it can also be sensitive to outliers, since it takes the average of all pairwise distances between clusters.</p>
 <hr>
 <h3 id="average-linkage-method-inr">Average Linkage Method in R</h3>
-<p>Since I covered cophenetic distance in the Ward's Minimum Variance Method, I will not share it with you in this part. However, I need to state that Euclidean distance again gave the better results. In addition, methods to determine optimal number of clusters, again, suggested 2 as the optimal number of clusters.</p>
+<p>Since I covered cophenetic distance in the Ward&rsquo;s Minimum Variance Method, I will not share it with you in this part. However, I need to state that Euclidean distance again gave the better results. In addition, methods to determine optimal number of clusters, again, suggested 2 as the optimal number of clusters.</p>
 <p>Again, you can use fviz_dend function in the factoextra package to visualise dendogram of a hierarchical clustering with the object you created from hierarchical clustering with the function hclust from stats package.</p>
 <pre tabindex="0"><code>hc_e2 &lt;- hclust(d=dist_euc, method=&#34;average&#34;)
 fviz_dend(hc_e2,cex=.5) 
 </code></pre><p><img src="https://cdn-images-1.medium.com/max/800/1*USFITshh7dW_xONYXy8CPg.png" alt=""></p>
-<p>As we can see from the dendogram easily, it is very different from the Ward's dendogram. It seems clusters are highly unbalanced with respect to the Ward. This may cause a problem for the cluster analysis. However, it is a beneficial example to show that linkage is highly dependent on the data set. It is crucial to decide the best linkage method for the data. One way to decide the linkage is to check the descriptive statistics of the data set to see if there are outliers. Another way is to try all of the linkage methods to see which dendogram looks fine.</p>
-<p>Again, it is hard to interpret it from the dendogram, but, we will continue with 2 clusters. One reason is the methods to determine the optimal number of clusters suggested cluster number to be 2. Another reason is to compare the result with Ward's Minimum Variance methods.</p>
+<p>As we can see from the dendogram easily, it is very different from the Ward&rsquo;s dendogram. It seems clusters are highly unbalanced with respect to the Ward. This may cause a problem for the cluster analysis. However, it is a beneficial example to show that linkage is highly dependent on the data set. It is crucial to decide the best linkage method for the data. One way to decide the linkage is to check the descriptive statistics of the data set to see if there are outliers. Another way is to try all of the linkage methods to see which dendogram looks fine.</p>
+<p>Again, it is hard to interpret it from the dendogram, but, we will continue with 2 clusters. One reason is the methods to determine the optimal number of clusters suggested cluster number to be 2. Another reason is to compare the result with Ward&rsquo;s Minimum Variance methods.</p>
 <pre tabindex="0"><code>grupav2 &lt;- cutree(hc_e2, k = 2)
 grupav2
 table(grupav2)
@@ -464,7 +464,7 @@ grupav2
 </code></pre><p><img src="https://cdn-images-1.medium.com/max/800/1*glHE7nwCyRxoN7OYhCKoyA.png" alt=""></p>
 <hr>
 <p>That was the end of this post. Just like always:</p>
-<p>&quot;In case I don't see ya, good afternoon, good evening, and good night!&quot;</p>
+<p>&ldquo;In case I don&rsquo;t see ya, good afternoon, good evening, and good night!&rdquo;</p>
 <hr>
 <p><strong>References</strong></p>
 <p>[1] Ward Jr, J. H. (1963). Hierarchical grouping to optimize an objective function. Journal of the American statistical association, 58(301), 236&ndash;244.</p>
@@ -492,8 +492,8 @@ grupav2
     <li>
       <ul>
         <li><a href="#what-hierarchical-clustering-is">What Hierarchical Clustering is?</a></li>
-        <li><a href="#wards-minimum-variancemethod">Ward's Minimum Variance Method</a></li>
-        <li><a href="#wards-minimum-variance-method-inr">Ward's Minimum Variance Method in R</a></li>
+        <li><a href="#wards-minimum-variancemethod">Ward&rsquo;s Minimum Variance Method</a></li>
+        <li><a href="#wards-minimum-variance-method-inr">Ward&rsquo;s Minimum Variance Method in R</a></li>
         <li><a href="#average-linkagemethod">Average Linkage Method</a></li>
         <li><a href="#average-linkage-method-inr">Average Linkage Method in R</a></li>
       </ul>
