--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -255,16 +255,16 @@ Blogs | feo
                 <div class="card h-100">
                     
                     <div class="card-body bg-transparent p-4 shadow-sm">
-                        <a href="/blogs/dataviz/" class="primary-font card-title">
-                            <h5 class="card-title bg-transparent" title="Data Visualization">Data Visualization</h5>
+                        <a href="/blogs/yourggplottheme/" class="primary-font card-title">
+                            <h5 class="card-title bg-transparent" title="Create your own ggplot theme!">Create your own ggplot …</h5>
                         </a>
                         <div class="card-text secondary-font">
-                            <p>Data visualization can be defined as the use of graphical or pictorial representations to present data in a way that makes it easier to understand, analyze, and communicate. It involves the use of visual elements such as charts, graphs, and maps to help users better understand and interpret complex …</p>
+                            <p>theme() function in the ggplot2 package is used to customize the appearance of the drawn plots. It is a comprehensive function with dozens of arguments, although I don&rsquo;t know exactly how many. Below you can find some widely used arguments and what they do</p>
                         </div>
                     </div>
                     <div class="mt-auto post-footer bg-transparent py-3">
                         <span class="float-start bg-transparent">Mar 22, 2023</span>
-                        <a href="/blogs/dataviz/" class="float-end btn btn-outline-info btn-sm">Read</a>
+                        <a href="/blogs/yourggplottheme/" class="float-end btn btn-outline-info btn-sm">Read</a>
                     </div>
                 </div>
             </div>
@@ -275,16 +275,16 @@ Blogs | feo
                 <div class="card h-100">
                     
                     <div class="card-body bg-transparent p-4 shadow-sm">
-                        <a href="/blogs/infmonkey/" class="primary-font card-title">
-                            <h5 class="card-title bg-transparent" title="Infinite Monkey">Infinite Monkey</h5>
+                        <a href="/blogs/dataviz/" class="primary-font card-title">
+                            <h5 class="card-title bg-transparent" title="Data Visualization">Data Visualization</h5>
                         </a>
                         <div class="card-text secondary-font">
-                            <p>Infinite Monkey Theorem</p>
+                            <p></p>
                         </div>
                     </div>
                     <div class="mt-auto post-footer bg-transparent py-3">
                         <span class="float-start bg-transparent">Mar 22, 2023</span>
-                        <a href="/blogs/infmonkey/" class="float-end btn btn-outline-info btn-sm">Read</a>
+                        <a href="/blogs/dataviz/" class="float-end btn btn-outline-info btn-sm">Read</a>
                     </div>
                 </div>
             </div>
