--- a/public/index.html
+++ b/public/index.html
@@ -591,13 +591,14 @@ feo
             </div>
             
             <div class="col-sm-12 col-md-12 col-lg-8 content">
-                <p>&ldquo;Hello there! I&rsquo;m Fatih Emre Öztürk, a data wizard in the enchanting world of data science (or let&rsquo;s say, a bit of an R guru and a bit of a data bender). My title says Data Scientist, but I&rsquo;m a rookie in terms of previous experience. However, my educational journey has been quite magical.</p>
+                <p>Hello there! I&rsquo;m Fatih Emre Öztürk, a data wizard in the enchanting world of data science (or let&rsquo;s say, a bit of an R guru and a bit of a data bender). My title says Data Scientist, but I&rsquo;m a rookie in terms of previous experience. However, my educational journey has been quite magical.</p>
 <p>After waltzing with philosophy at Bilkent University, I decided to embark on a thrilling adventure of pursuing a master&rsquo;s degree in Data Science at Dokuz Eylül University. I got lost in the enchanting realms of Python and R, and befriended magical tools like SQL, JavaScript, Matlab, and Excel. I also have a surprisingly good rapport with Bash (I&rsquo;m quite spellbound by the power of commands). I possess magical skills like machine learning, data analysis, and crafting ML pipelines.</p>
 <p>During this enchanting journey, I&rsquo;ve achieved some milestones. I completed my studies at Dokuz Eylül University with High Honor (no magic hat required!). Oh, and I have a passion for writing too—I&rsquo;ve penned down two novels (guess I can weave data into characters&rsquo; lives as well).</p>
 <p>Among my passions, you&rsquo;ll find me indulging in science fiction and fantasy books, movies, and series (I might be a bit of a geek). Additionally, I have a special interest in ethical issues related to AI—tackling the moral quandaries of artificial intelligence is right up my alley (I prefer embracing AI with a friendly approach instead of pushing its limits). If you ever get lost in the data realm, I can transform into a magical source of R!</p>
 <p>As for my professional goals, I aspire to develop algorithms that empower individuals and organizations to make better decisions, contributing to the advancement of AI and machine learning. I also aim to make our enchanting world more accessible by creating open-source resources alongside R and Python packages.</p>
 <p>Among my magical language skills, I possess English (at a professional working proficiency) and I can also converse in beginner-level French (Bonjour, ça va?). And of course, my native tongue is the enchanting Turkish!</p>
-<h2 id="if-youre-up-for-a-magical-adventure-in-the-world-of-data-feel-free-to-reach-out-in-a-magically-enchanting-way-remember-let-the-data-be-with-you">If you&rsquo;re up for a magical adventure in the world of data, feel free to reach out in a magically enchanting way! Remember, let the data be with you!&rdquo;</h2>
+<p>If you&rsquo;re up for a magical adventure in the world of data, feel free to reach out in a magically enchanting way! Remember, let the data be with you!&quot;</p>
+<hr>
 <h3 id="technical-training">Technical Training:</h3>
 <h4 id="university-courses">University courses</h4>
 <ul>
